<resources>
    <string name="app_name">Food and Drink</string>
    <string name="add_comment">Add comment...</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="shop">Shop</string>
    <string name="features">Features</string>
    <string name="category">Category</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="top_shop">Top shop</string>
    <string name="top_product">Top product</string>
    <string name="gruel">Gruel</string>
    <string name="cream">Cream</string>
    <string name="title_test">title</string>
    <string name="desc_test">desc</string>
    <string name="price_test">1000$</string>
    <string name="name_test">Hoàng Công Tùng</string>
    <string name="email_test">hoang.cong.tung@framgia.com</string>
    <string name="avatar">avatar</string>
    <string name="change_password">Change password</string>
    <string name="logout">Logout</string>
    <string name="default_value">default value</string>
    <string name="name_title">Name</string>
    <string name="phone_title">Phone</string>
    <string name="phone_test">01690001230</string>
    <string name="email_title">Email</string>
    <string name="test_email">test@gmail.com</string>
    <string name="title_activity_login">Sign in</string>
    <string name="password_title">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User name</string>
    <string name="condition">Accept with the condition</string>
    <string name="email_or_username">Email or username</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change">Change</string>
    <string name="settings">Settings</string>
    <string name="item_detail">Item detail</string>
    <string name="shops">Shops</string>
    <string name="done">done</string>
    <string name="cancel">Cancel</string>
    <string name="take_pic">Take pic</string>
    <string name="ask_for_pic_content">How do you want to get your picture?</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="quick_order">Quick order</string>
    <string name="shop_management">Shop management</string>
    <string name="product_name">Product name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="product_image">Product image</string>
    <string name="image_loading">Image Loading</string>
    <string name="load_image_fail">Load image fail!</string>
    <string name="product_preview">Product preview</string>
    <string name="use_reminder">Use reminder</string>
    <string name="order_now">Order Now</string>
    <string name="notify_message">Time to have lunch</string>
    <string name="notify_order_now">Order now!</string>
    <string name="your_order">Your order</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="shop_statistics">Shop statistics</string>
    <string name="report">Report</string>
    <string name="feature">Feature</string>
    <string name="top_shops">Top shops</string>
    <string name="update">Update</string>
    <string name="reset">Reset</string>
    <string name="new_products">New</string>
    <string name="congratulation">Congratulation!</string>
    <string name="new_shop_noticed">New shop added!</string>
    <string name="product_title_test">product</string>
    <string name="shop_fake">Shop fake</string>
    <string name="product_added_content">Your products added!</string>
</resources>
