<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/gr_main_function"
        android:checkableBehavior="single">
    <item
        android:id="@+id/nav_cart"
        android:title="@string/cart"/>
    <item
        android:id="@+id/nav_order"
        android:title="@string/your_order"/>
    <item
        android:id="@+id/nav_notify"
        android:title="@string/notification"/>
    <item
        android:id="@+id/nav_home"
        android:title="@string/home"/>
    </group>
    <group
        android:id="@+id/gr_profile"
        android:checkableBehavior="single"
        android:visible="false">
        <item
            android:id="@+id/nav_account"
            android:title="@string/account"/>
        <item
            android:id="@+id/nav_shop_management"
            android:title="@string/shop_management"/>
        <item
            android:id="@+id/nav_shop_statics"
            android:title="@string/shop_statistics"/>
        <item
            android:id="@+id/nav_report"
            android:title="@string/report"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"/>
    </group>

</menu>
