<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activity.RegisterActivity">

    <AutoCompleteTextView
        android:id="@+id/username_or_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_or_username"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_title"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"/>

    <Button
        android:id="@+id/btn_signin"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_signin_margin_top"
        android:background="@color/colorPrimary"
        android:text="@string/action_sign_in"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/add_btn_layout_margin_top"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_forgot"
            style="@style/TransparentBtnInLoginPage"
            android:text="@string/forgot_password"/>

        <Button
            android:id="@+id/btn_register"
            style="@style/TransparentBtnInLoginPage"
            android:onClick="register"
            android:text="@string/register"/>
    </LinearLayout>
</LinearLayout>
